# datacleaning_openenv

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STATUS_AND_PLAN.md  README.md  compliance_check.py  debug_hard.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run_auth_tests.py  test_auth_output.txt  test_output.txt  walkthrough.md
api/: __init__.py  main.py
environment/: __init__.py  env.py  logging_config.py  models.py
environment/graders/: __init__.py  base_grader.py  grader_easy.py  grader_hard.py  grader_medium.py  grader_random.py
environment/tasks/: __init__.py  base_task.py  task_easy.py  task_hard.py  task_medium.py  task_random.py
server/: __init__.py  app.py
tests/: test_api.py  test_auth.py  test_env.py  test_graders.py  test_inference.py  test_logging.py  test_models.py
