[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datacleaning-openenv"
version = "1.0.0"
description = "Deterministic multi-task benchmark for iterative tabular data cleaning agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.1",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "requests>=2.32.2",
    "openai>=1.30.1",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
include = ["api*", "environment*", "server*"]

